# TurboHiker

./: .clang-format  .gitignore  CMakeLists.txt  Q&Afor the project.txt  README.md  programming-help.md  readme-and-report.md  report.md  verslag.md
LibTurboHiker/src/: lib.cpp  lib.h
SFMLTurboHiker/: CMakeLists.txt
SFMLTurboHiker/src/: main.cpp
TurboHikerLib/: CMakeLists.txt
TurboHikerLib/src/: Game.cpp  Game.h  lib.cpp
TurboHikerLib/src/turboHiker/: Category.h  Command.cpp  Command.h  CommandQueue.cpp  CommandQueue.h  Game.cpp  Game.h  GameCategory.h  GameObject.cpp  GameObject.h  HikeStatus.h  LiveScore.cpp  LiveScore.h  Removable.cpp  SceneGraph.cpp  SceneGraph.h  World.cpp  World.h
TurboHikerLib/src/turboHiker/abstractVisuals/: EmptyVisualComponent.h  VisualComponent.cpp  VisualComponent.h  VisualObject.cpp  VisualObject.h
TurboHikerLib/src/turboHiker/commands/: Command.cpp  Command.h  CommandQueue.cpp  CommandQueue.h
TurboHikerLib/src/turboHiker/ecs/components/: EmptyRenderComponent.cpp  EmptyRenderComponent.h  InputComponent.h  Model.cpp  Model.h  MovingPhysicsComponent.cpp  MovingPhysicsComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  RenderComponent.cpp  RenderComponent.h  WorldPosition.cpp  WorldPosition.h
TurboHikerLib/src/turboHiker/ecs/components/physics/: BoundingBox.cpp  MovingPhysicsComponent.cpp  MovingPhysicsComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  Velocity.cpp  Velocity.h
TurboHikerLib/src/turboHiker/ecs/components/physics/collision/: CollisionComponent.cpp  CollisionComponent.h
TurboHikerLib/src/turboHiker/ecs/modules/: Model.h
TurboHikerLib/src/turboHiker/ecs/systems/: PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h
TurboHikerLib/src/turboHiker/entities/: Entity.cpp  Entity.h  EntityFactory.h  Hiker.cpp  Hiker.h  MovableEntity.cpp  MovableEntity.h  SceneNode.cpp  SceneNode.h
TurboHikerLib/src/turboHiker/entities/components/: EmptyRenderComponent.cpp  EmptyRenderComponent.h  RenderComponent.h
TurboHikerLib/src/turboHiker/entities/components/modules/: BoundingBox.cpp  BoundingBox.h  WorldLocation.cpp
TurboHikerLib/src/turboHiker/entities/components/physics/: CollisionComponent.cpp  CollisionComponent.h  MovingPhysicsComponent.cpp  MovingPhysicsComponent.h  PhysicsComponent.cpp  PhysicsComponent.h
TurboHikerLib/src/turboHiker/gameObjects/: Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  GameObject.cpp  GameObject.h  SceneNode.cpp  SceneNode.h
TurboHikerLib/src/turboHiker/gameObjects/components/: EmptyRenderComponent.cpp  EmptyRenderComponent.h  InputComponent.cpp  RenderComponent.h
TurboHikerLib/src/turboHiker/gameObjects/components/modules/: WorldLocation.h
TurboHikerLib/src/turboHiker/gameObjects/components/physics/: CollisionComponent.cpp  CollisionComponent.h  MovingPhysicsComponent.cpp  MovingPhysicsComponent.h  PhysicsComponent.cpp  PhysicsComponent.h
TurboHikerLib/src/turboHiker/interfaces/: Commandable.h  Drawable.h  EventObserver.h  Observable.cpp  Observable.h  Removable.cpp  Removable.h  Renderable.h  Updatable.cpp  Updatable.h
TurboHikerLib/src/turboHiker/scenenodes/: EntityFactory.h  Finish.cpp  Finish.h  Hiker.cpp  Hiker.h  SceneNode.cpp  SceneNode.h  SceneNodeFactory.h
TurboHikerLib/src/turboHiker/scenenodes/components/: BoundingBox.cpp  BoundingBox.h  Renderer.cpp  Renderer.h  SceneNodeRenderer.h
TurboHikerLib/src/turboHiker/scenenodes/entities/: Entity.cpp  Entity.h  Hiker.cpp  Hiker.h  PlayerHiker.cpp  PlayerHiker.h  RunningHiker.cpp  RunningHiker.h  StaticHiker.cpp  StaticHiker.h
TurboHikerLib/src/turboHiker/scoring/: HighScoreContainer.cpp  HighScoreContainer.h  HighScores.cpp  HighScores.h  LiveScore.h  Score.cpp  Score.h
TurboHikerLib/src/turboHiker/utils/: Clock.h  NonCopyable.h  Random.cpp  Random.h  Stopwatch.cpp  Stopwatch.h  constants.h
TurboHikerLib/src/turboHiker/utils/maths/: Transform.cpp  Transform.h  Vector2d.cpp  Vector2d.h
TurboHikerLib/src/turboHiker/view/: Transformation.cpp  Transformation.h  WindowSize.cpp  WindowSize.h  WorldView.cpp  WorldView.h
TurboHikerLib/src/turboHiker/world/: SceneGraph.cpp  SceneGraph.h  World.cpp  World.h  WorldStats.cpp  WorldStats.h
TurboHikerLib/src/turboHikerLib/: Game.cpp  Game.h
TurboHikerLib/src/turboHikerLib/utils/: Clock.cpp  Clock.h  NonCopyable.cpp
TurboHikerLib/src/turbo_lib/: lib.cpp  lib.h
TurboHikerLib/src/utils/: Clock.cpp  Clock.h  constants.h
TurboHikerSFML/: CMakeLists.txt
TurboHikerSFML/src/: EntityFactorySFML.cpp  EntityFactorySFML.h  GameSFML.cpp  GameSFML.h  SFMLGame.cpp  SFMLGame.h  SceneNodeFactorySFML.cpp  SceneNodeFactorySFML.h  main.cpp
TurboHikerSFML/src/inputhandling/: Player.cpp  Player.h
TurboHikerSFML/src/interfaces/: DrawableRenderer.h  WindowDrawer.h  WindowRenderer.h
TurboHikerSFML/src/utils/: FontManager.cpp  FontManager.h  Transformation.cpp  Transformation.h
TurboHikerSFML/src/visualComponents/: HikerModel.cpp  HikerModel.h  VisualComponentSFML.cpp  VisualComponentSFML.h
TurboHikerSFML/src/visualisation/: Color.cpp  Color.h  Graphics.cpp  Graphics.h  MyRenderWindow.cpp  MyRenderWindow.h  RenderComponentSFML.cpp  RenderComponentSFML.h  SceneNode.cpp  SceneNode.h  SceneNodeRendererSFML.cpp  SceneNodeRendererSFML.h  ShapeRenderComponent.cpp  ShapeRenderComponent.h  SpriteRenderComponent.cpp  SpriteRenderComponent.h  WindowHandler.cpp  WindowHandler.h
TurboHikerSFML/src/visualisation/hikers/: HikerRenderComponent.cpp  HikerRenderComponent.h
TurboHikerSFML/src/visualisation/renderers/: FinishRenderer.cpp  FinishRenderer.h  HikerRenderer.cpp  HikerRenderer.h  LaneRenderer.cpp  LaneRenderer.h
TurboHikerSFML/src/visualisation/view/: Transformation.cpp  Transformation.h  WindowSize.cpp  WindowSize.h  WorldView.cpp  WorldView.h
cmake/Modules/: FindSFML.cmake
src/: CMakeLists.txt
